--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,7 @@ nav.desktop-menu{
 }
 
 nav.mobile-menu{
+	
 	display: block;
 	cursor: pointer;
 	width: 32px;
@@ -433,12 +434,13 @@ nav.mobile-menu{
 	background-image: url('../imagens/lista.png');
 	background-size: 100% 100%;
 }
-nav.mobile-menu:hover ul{
+/* nav.mobile-menu:hover ul{
 	opacity:1;
-}
+} */
 nav.mobile-menu ul{
-	opacity: 0;
-	transition: 1s;
+	
+	display: none;
+	/* transition: 1s; */
 	background-color: white;
 	position: absolute;
 	width: 100%;
